[gd_scene load_steps=11 format=2]

[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelSelectionWholeScreen/GUI_LevelSelectionWholeScreen.gd" type="Script" id=1]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelSelectionWholeScreen/Subs/LevelMainMidPanel/GUI_LevelLayout_MainMidPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameFrontHUDRelated/Subs/CoinsPanel/CoinsPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://MiscRelated/DrawRelated/CircleDrawNode/CircleDrawNode.gd" type="Script" id=5]
[ext_resource path="res://GameFrontHUDRelated/Subs/LevelsCompletedPanel/LevelsCompletedPanel.tscn" type="PackedScene" id=6]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelSelectionWholeScreen/Subs/LevelDetailsPanel/GUI_LevelDetailsPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://_NonMainGameRelateds/_LevelSelectionRelated/GUIRelateds/GUI_LevelSelectionWholeScreen/Subs/LevelLayoutShortcutPanel/GUI_LevelLayoutShortcutPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameBackgroundRelated/GameBackground.tscn" type="PackedScene" id=9]
[ext_resource path="res://GameFrontHUDRelated/Subs/TrophyPanel/TrophyPanel.tscn" type="PackedScene" id=12]
[ext_resource path="res://MiscRelated/DrawRelated/RectDrawNode/RectDrawNode.gd" type="Script" id=13]

[node name="GUI_LevelSelectionLayout" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 1 )

[node name="GameBackground" parent="." instance=ExtResource( 9 )]

[node name="StarGridBackground" parent="GameBackground" index="1"]
delay_per_star_show_or_hide = 0.02

[node name="AbstractLevelLayoutContainer" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="HUDContainer" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="DialogPanel" parent="HUDContainer" instance=ExtResource( 2 )]
margin_top = -155.0
margin_bottom = -5.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUDContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -103.0
margin_top = 30.0
margin_right = -23.0
margin_bottom = 70.0

[node name="CoinsPanel" parent="HUDContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 80.0
margin_bottom = 24.0

[node name="LevelsCompletedPanel" parent="HUDContainer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 28.0
margin_bottom = 52.0

[node name="TrophyPanel" parent="HUDContainer/VBoxContainer" instance=ExtResource( 12 )]
margin_left = 40.0
margin_top = 56.0
margin_right = 80.0
margin_bottom = 71.0
size_flags_horizontal = 10
can_show_healths_related_trophies = false

[node name="LevelDetailsPanel" parent="HUDContainer" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -155.0
margin_right = -5.0
margin_bottom = -5.0

[node name="LevelLayoutShortcutPanel" parent="HUDContainer" instance=ExtResource( 8 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -187.0
margin_right = 187.0
margin_bottom = -5.0

[node name="ParticlesContainer" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2

[node name="CircularDrawNode_CircleBurst" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="RectDrawNode_LevelHovered" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="CircDrawNode_LayoutHovered" type="Node2D" parent="."]
script = ExtResource( 5 )

[editable path="GameBackground"]
